feat(dashboard): :sparkles: add data based rendering for all components in dashboard

--- a/src/components/dashboard/Dashboard.module.scss
+++ b/src/components/dashboard/Dashboard.module.scss
@@ -1,9 +1,10 @@
 .dashboard {
+    align-items: center;
     background-color: #000;
     display: flex;
-    min-height: calc(100vh - 96px);
     flex-wrap: wrap;
     justify-content: space-between;
+    min-height: calc(100vh - 96px);
     
     .presenceIndicator {
         display: flex;
