fix(dashboard): :bug: fix page to work with incoming data flow

--- a/src/components/dashboard/Dashboard.module.scss
+++ b/src/components/dashboard/Dashboard.module.scss
@@ -3,8 +3,15 @@
     background-color: #000;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    font-size: 20px;
+    justify-content: center;
     min-height: calc(100vh - 96px);
+
+    > div {
+        width: 400px;
+        display: flex;
+        justify-content: space-between;
+    }
     
     .presenceIndicator {
         display: flex;
